// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card > should render with many props assigned 1`] = `
<div>
  <article
    class="m-4 flex min-h-[100px] min-w-[100px] flex-col flex-nowrap items-center justify-around bg-white p-6 text-secondary focus-visible:outline-none [&_svg]:fill-secondary shadow-sm transition-shadow duration-200 ease-linear hover:shadow-lg focus-visible:shadow-lg test-class"
  >
    Test
  </article>
</div>
`;

exports[`Card > should render with required props 1`] = `
<div>
  <article
    class="m-4 flex min-h-[100px] min-w-[100px] flex-col flex-nowrap items-center justify-around bg-white p-6 text-secondary shadow-md focus-visible:outline-none [&_svg]:fill-secondary"
  >
    Test
  </article>
</div>
`;
